Use non deprecated method (#284)